add Log bill and set budget a tags

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,5 +23,13 @@
         </div>
     </div>
     {{/each}}
+
+    <div class="logBillBut">
+        <a href="./logBill.html">Log Bill</a>
+    </div>
+
+     <div class="logBillBut">
+        <a href="./setBudget.html">Set Budget</a>
+    </div>
 </div>
 
