added server.js and changed html so everything connects

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -39,11 +39,11 @@
         
     </div>
     <div class="logBillBut">
-        <a href="./logBill.html">Log Bill</a>
+        <a href="/logBill">Log Bill</a>
     </div>
 
      <div class="logBillBut">
-        <a href="./setBudget.html">Set Budget</a>
+        <a href="/setBudget">Set Budget</a>
     </div>
 </div>
 
