--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
         </form>
 
         <div class="mainSignUp">
-            <a href="./signup.html">Sign Up</a>
+            <a href="/signup">Sign Up</a>
         </div>
 
     </div>
