added jquey AJAX to addbill and added password to input on index

--- a/views/addbill.handlebars
+++ b/views/addbill.handlebars
@@ -11,10 +11,10 @@
             <p class="bill-header">Which category would you like to add an expense for?</p>
             <div class="dropdown">
                 <select class="dropdown-content">
-                    <option value="1">Groceries</option>
-                    <option value="2">Transportation</option>
-                    <option value="3">Dining</option>
-                    <option value="4">Shopping</option>
+                    <option value="groceries">Groceries</option>
+                    <option value="transportation">Transportation</option>
+                    <option value="dining">Dining</option>
+                    <option value="shopping">Shopping</option>
                 </select>
             </div>
 
@@ -29,4 +29,4 @@
         <a href="./index.html" class="index"></a>
     </div>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src='../Public/JS/addbill.js'></script>
