--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
             <p class="mainUsername">Username</p>
             <input type="text" name="addMainUsername">
             <p class="mainPassword">Password</p>
-            <input type="text" name="addMainPassword">
+            <input type="password" name="addMainPassword">
             <button type="submit" class="mainLogBut">login</button>
         </form>
 
