added stylings and rearranged html so each one has their own css

--- a/views/addbill.handlebars
+++ b/views/addbill.handlebars
@@ -1,11 +1,19 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Penny Pinchers</title>
+    <link rel="stylesheet" href="/CSS/addbill.css" type="text/css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+</head>
 
-    
+<body>
     <header class="headTitle">
         <h1 class="headApName">Penny Pinchers</h1>
-        <h3 class="headApSlogan">Who's the ultimate saver?</h3>
-    </header>  
+    
+    </header> 
 
-    <br>
+
     <div class="main">
         <form class="bill-form">
             <p class="bill-header">Which category would you like to add an expense for?</p>
@@ -30,3 +38,4 @@
     </div>
 
     <script src='../Public/JS/addbill.js'></script>
+</body>
