--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,28 +1,42 @@
-<header class="dashTitle">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Penny Pinchers</title>
+    <link rel="stylesheet" href="/CSS/dashboard.css" type="text/css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+</head>
+
+<body>
+    <header class="headTitle">
         <h1 class="headApName">Penny Pinchers</h1>
-</header>  
+    
+    </header> 
 
 <div class="dashAll">
-    {{#each budget}}
+   
     <div class="dashSaveTitle">
-        <div class="grocDiv"></div>
+         {{#each budget}}
+    <div class="dashSaveTitle">
+        <div class="grocDiv">
             <h3 class="dashGroc">Groceries</h3>
             <p class="grocBudget">{{groceries}}</p>
         </div>
-        <div class="transDiv"></div>
+        <div class="transDiv">
             <h3 class="dashtrans">Transportation</h3>
             <p class="transBudget">{{transportation}}</p>
         </div>
-        <div class="diningDiv"></div>
+        <div class="diningDiv">
             <h3 class="dashDining">Dining</h3>
             <p class="diningBudget">{{dining}}</p>
         </div>
-        <div class="shopDiv"></div>
+        <div class="shopDiv">
             <h3 class="dashShop">Shopping</h3>
             <p class="shopBudget">{{shopping}}</p>
         </div>
     </div>
-    {{/each}}
+        {{/each}}
+    
     <div class="graphDiv">
         <div class="chart1Div">
             <div id="chart1" class="chart1"></div>
@@ -38,359 +52,367 @@
         </div>
         
     </div>
-    <div class="logBillBut">
-        <a href="/logBill">Log Bill</a>
+
+    <div class="pointDiv">
+        <p class="point">Total points: </p>
     </div>
 
-     <div class="logBillBut">
-        <a href="/setBudget">Set Budget</a>
+    <div class="buts">
+        <div class="logBillBut">
+            <a href="/logBill">Log Bill</a>
+        </div>
+
+        <div class="setBut">
+            <a href="/setBudget">Set Budget</a>
+        </div>
     </div>
 </div>
 
-<script type="text/javascript">
-  
-  //Chart 1 --------------------------------------
-  
-  {{#each points}}
-
-    var options = {
-        series: [Number({{groceriesPoints}})],
-        chart: {
-        height: 350,
-        type: 'radialBar',
-        toolbar: {
-        show: true
-        }
-    },
-    plotOptions: {
-        radialBar: {
-        startAngle: -135,
-        endAngle: 225,
-        hollow: {
-            margin: 0,
-            size: '70%',
-            background: '#fff',
-            image: undefined,
-            imageOffsetX: 0,
-            imageOffsetY: 0,
-            position: 'front',
-            dropShadow: {
-            enabled: true,
-            top: 3,
-            left: 0,
-            blur: 4,
-            opacity: 0.24
-            }
-        },
-        track: {
-            background: '#fff',
-            strokeWidth: '67%',
-            margin: 0, 
-            dropShadow: {
-            enabled: true,
-            top: -3,
-            left: 0,
-            blur: 4,
-            opacity: 0.35
-            }
-        },
+    <script type="text/javascript">
     
-        dataLabels: {
-            show: true,
-            name: {
-            offsetY: -10,
-            show: true,
-            color: '#888',
-            fontSize: '17px'
-            },
-            value: {
-            formatter: function(val) {
-                return parseInt(val);
-            },
-            color: '#111',
-            fontSize: '36px',
-            show: true,
-            }
-        }
-        }
-    },
-    fill: {
-        type: 'gradient',
-        gradient: {
-        shade: 'dark',
-        type: 'horizontal',
-        shadeIntensity: 0.5,
-        gradientToColors: ['#ABE5A1'],
-        inverseColors: true,
-        opacityFrom: 1,
-        opacityTo: 1,
-        stops: [0, 100]
-        }
-    },
-    stroke: {
-        lineCap: 'round'
-    },
-    labels: ['Points'],
-    };
-
-    var chart = new ApexCharts(document.querySelector("#chart1"), options);
-    chart.render();
-
-    //Chart 2 --------------------------------------
+    //Chart 1 --------------------------------------
+    
+    {{#each points}}
 
         var options = {
-        series: [Number({{transportationPoints}})],
-        chart: {
-        height: 350,
-        type: 'radialBar',
-        toolbar: {
-        show: true
-        }
-    },
-    plotOptions: {
-        radialBar: {
-        startAngle: -135,
-        endAngle: 225,
-        hollow: {
-            margin: 0,
-            size: '70%',
-            background: '#fff',
-            image: undefined,
-            imageOffsetX: 0,
-            imageOffsetY: 0,
-            position: 'front',
-            dropShadow: {
-            enabled: true,
-            top: 3,
-            left: 0,
-            blur: 4,
-            opacity: 0.24
+            series: [Number({{groceriesPoints}})],
+            chart: {
+            height: 200,
+            type: 'radialBar',
+            toolbar: {
+            show: true
             }
         },
-        track: {
-            background: '#fff',
-            strokeWidth: '67%',
-            margin: 0, 
-            dropShadow: {
-            enabled: true,
-            top: -3,
-            left: 0,
-            blur: 4,
-            opacity: 0.35
+        plotOptions: {
+            radialBar: {
+            startAngle: -135,
+            endAngle: 225,
+            hollow: {
+                margin: 0,
+                size: '70%',
+                background: '#fff',
+                image: undefined,
+                imageOffsetX: 0,
+                imageOffsetY: 0,
+                position: 'front',
+                dropShadow: {
+                enabled: true,
+                top: 3,
+                left: 0,
+                blur: 4,
+                opacity: 0.24
+                }
+            },
+            track: {
+                background: '#fff',
+                strokeWidth: '67%',
+                margin: 0, 
+                dropShadow: {
+                enabled: true,
+                top: -3,
+                left: 0,
+                blur: 4,
+                opacity: 0.35
+                }
+            },
+        
+            dataLabels: {
+                show: true,
+                name: {
+                offsetY: -10,
+                show: true,
+                color: '#888',
+                fontSize: '17px'
+                },
+                value: {
+                formatter: function(val) {
+                    return parseInt(val);
+                },
+                color: '#111',
+                fontSize: '26px',
+                show: true,
+                }
+            }
             }
         },
-    
-        dataLabels: {
-            show: true,
-            name: {
-            offsetY: -10,
-            show: true,
-            color: '#888',
-            fontSize: '17px'
-            },
-            value: {
-            formatter: function(val) {
-                return parseInt(val);
-            },
-            color: '#111',
-            fontSize: '36px',
-            show: true,
-            }
-        }
-        }
-    },
-    fill: {
-        type: 'gradient',
-        gradient: {
-        shade: 'dark',
-        type: 'horizontal',
-        shadeIntensity: 0.5,
-        gradientToColors: ['#ABE5A1'],
-        inverseColors: true,
-        opacityFrom: 1,
-        opacityTo: 1,
-        stops: [0, 100]
-        }
-    },
-    stroke: {
-        lineCap: 'round'
-    },
-    labels: ['Points'],
-    };
-
-    var chart = new ApexCharts(document.querySelector("#chart2"), options);
-    chart.render();
-
-    //Chart 3 --------------------------------------
-
-        var options = {
-        series: [Number({{diningPoints}})],
-        chart: {
-        height: 350,
-        type: 'radialBar',
-        toolbar: {
-        show: true
-        }
-    },
-    plotOptions: {
-        radialBar: {
-        startAngle: -135,
-        endAngle: 225,
-        hollow: {
-            margin: 0,
-            size: '70%',
-            background: '#fff',
-            image: undefined,
-            imageOffsetX: 0,
-            imageOffsetY: 0,
-            position: 'front',
-            dropShadow: {
-            enabled: true,
-            top: 3,
-            left: 0,
-            blur: 4,
-            opacity: 0.24
+        fill: {
+            type: 'gradient',
+            gradient: {
+            shade: 'dark',
+            type: 'horizontal',
+            shadeIntensity: 0.5,
+            gradientToColors: ['#eab995'],
+            inverseColors: true,
+            opacityFrom: 1,
+            opacityTo: 1,
+            stops: [0, 100]
             }
         },
-        track: {
-            background: '#fff',
-            strokeWidth: '67%',
-            margin: 0, 
-            dropShadow: {
-            enabled: true,
-            top: -3,
-            left: 0,
-            blur: 4,
-            opacity: 0.35
+        stroke: {
+            lineCap: 'round'
+        },
+        labels: ['Points'],
+        };
+
+        var chart = new ApexCharts(document.querySelector("#chart1"), options);
+        chart.render();
+
+        //Chart 2 --------------------------------------
+
+            var options = {
+            series: [Number({{transportationPoints}})],
+            chart: {
+            height: 200,
+            type: 'radialBar',
+            toolbar: {
+            show: true
             }
         },
-    
-        dataLabels: {
-            show: true,
-            name: {
-            offsetY: -10,
-            show: true,
-            color: '#888',
-            fontSize: '17px'
+        plotOptions: {
+            radialBar: {
+            startAngle: -135,
+            endAngle: 225,
+            hollow: {
+                margin: 0,
+                size: '70%',
+                background: '#fff',
+                image: undefined,
+                imageOffsetX: 0,
+                imageOffsetY: 0,
+                position: 'front',
+                dropShadow: {
+                enabled: true,
+                top: 3,
+                left: 0,
+                blur: 4,
+                opacity: 0.24
+                }
             },
-            value: {
-            formatter: function(val) {
-                return parseInt(val);
+            track: {
+                background: '#fff',
+                strokeWidth: '67%',
+                margin: 0, 
+                dropShadow: {
+                enabled: true,
+                top: -3,
+                left: 0,
+                blur: 4,
+                opacity: 0.35
+                }
             },
-            color: '#111',
-            fontSize: '36px',
-            show: true,
+        
+            dataLabels: {
+                show: true,
+                name: {
+                offsetY: -10,
+                show: true,
+                color: '#888',
+                fontSize: '17px'
+                },
+                value: {
+                formatter: function(val) {
+                    return parseInt(val);
+                },
+                color: '#111',
+                fontSize: '26px',
+                show: true,
+                }
             }
-        }
-        }
-    },
-    fill: {
-        type: 'gradient',
-        gradient: {
-        shade: 'dark',
-        type: 'horizontal',
-        shadeIntensity: 0.5,
-        gradientToColors: ['#ABE5A1'],
-        inverseColors: true,
-        opacityFrom: 1,
-        opacityTo: 1,
-        stops: [0, 100]
-        }
-    },
-    stroke: {
-        lineCap: 'round'
-    },
-    labels: ['Points'],
-    };
-
-    var chart = new ApexCharts(document.querySelector("#chart3"), options);
-    chart.render();
-
-    //Chart 4 --------------------------------------
-
-        var options = {
-        series: [Number({{shoppingPoints}})],
-        chart: {
-        height: 350,
-        type: 'radialBar',
-        toolbar: {
-        show: true
-        }
-    },
-    plotOptions: {
-        radialBar: {
-        startAngle: -135,
-        endAngle: 225,
-        hollow: {
-            margin: 0,
-            size: '70%',
-            background: '#fff',
-            image: undefined,
-            imageOffsetX: 0,
-            imageOffsetY: 0,
-            position: 'front',
-            dropShadow: {
-            enabled: true,
-            top: 3,
-            left: 0,
-            blur: 4,
-            opacity: 0.24
             }
         },
-        track: {
-            background: '#fff',
-            strokeWidth: '67%',
-            margin: 0, 
-            dropShadow: {
-            enabled: true,
-            top: -3,
-            left: 0,
-            blur: 4,
-            opacity: 0.35
+        fill: {
+            type: 'gradient',
+            gradient: {
+            shade: 'dark',
+            type: 'horizontal',
+            shadeIntensity: 0.5,
+            gradientToColors: ['#eab995'],
+            inverseColors: true,
+            opacityFrom: 1,
+            opacityTo: 1,
+            stops: [0, 100]
             }
         },
-    
-        dataLabels: {
-            show: true,
-            name: {
-            offsetY: -10,
-            show: true,
-            color: '#888',
-            fontSize: '17px'
-            },
-            value: {
-            formatter: function(val) {
-                return parseInt(val);
-            },
-            color: '#111',
-            fontSize: '36px',
-            show: true,
+        stroke: {
+            lineCap: 'round'
+        },
+        labels: ['Points'],
+        };
+
+        var chart = new ApexCharts(document.querySelector("#chart2"), options);
+        chart.render();
+
+        //Chart 3 --------------------------------------
+
+            var options = {
+            series:  [Number({{diningPoints}})],
+            chart: {
+            height: 200,
+            type: 'radialBar',
+            toolbar: {
+            show: true
             }
-        }
-        }
-    },
-    fill: {
-        type: 'gradient',
-        gradient: {
-        shade: 'dark',
-        type: 'horizontal',
-        shadeIntensity: 0.5,
-        gradientToColors: ['#ABE5A1'],
-        inverseColors: true,
-        opacityFrom: 1,
-        opacityTo: 1,
-        stops: [0, 100]
-        }
-    },
-    stroke: {
-        lineCap: 'round'
-    },
-    labels: ['Points'],
-    };
+        },
+        plotOptions: {
+            radialBar: {
+            startAngle: -135,
+            endAngle: 225,
+            hollow: {
+                margin: 0,
+                size: '70%',
+                background: '#fff',
+                image: undefined,
+                imageOffsetX: 0,
+                imageOffsetY: 0,
+                position: 'front',
+                dropShadow: {
+                enabled: true,
+                top: 3,
+                left: 0,
+                blur: 4,
+                opacity: 0.24
+                }
+            },
+            track: {
+                background: '#fff',
+                strokeWidth: '67%',
+                margin: 0, 
+                dropShadow: {
+                enabled: true,
+                top: -3,
+                left: 0,
+                blur: 4,
+                opacity: 0.35
+                }
+            },
+        
+            dataLabels: {
+                show: true,
+                name: {
+                offsetY: -10,
+                show: true,
+                color: '#888',
+                fontSize: '17px'
+                },
+                value: {
+                formatter: function(val) {
+                    return parseInt(val);
+                },
+                color: '#111',
+                fontSize: '26px',
+                show: true,
+                }
+            }
+            }
+        },
+        fill: {
+            type: 'gradient',
+            gradient: {
+            shade: 'dark',
+            type: 'horizontal',
+            shadeIntensity: 0.5,
+            gradientToColors: ['#eab995'],
+            inverseColors: true,
+            opacityFrom: 1,
+            opacityTo: 1,
+            stops: [0, 100]
+            }
+        },
+        stroke: {
+            lineCap: 'round'
+        },
+        labels: ['Points'],
+        };
 
-    var chart = new ApexCharts(document.querySelector("#chart4"), options);
-    chart.render();
+        var chart = new ApexCharts(document.querySelector("#chart3"), options);
+        chart.render();
 
-    
-  {{/each}}
-</script>
+        //Chart 4 --------------------------------------
+
+            var options = {
+            series: [Number({{shoppingPoints}})],
+            chart: {
+            height: 200,
+            type: 'radialBar',
+            toolbar: {
+            show: true
+            }
+        },
+        plotOptions: {
+            radialBar: {
+            startAngle: -135,
+            endAngle: 225,
+            hollow: {
+                margin: 0,
+                size: '70%',
+                background: '#fff',
+                image: undefined,
+                imageOffsetX: 0,
+                imageOffsetY: 0,
+                position: 'front',
+                dropShadow: {
+                enabled: true,
+                top: 3,
+                left: 0,
+                blur: 4,
+                opacity: 0.24
+                }
+            },
+            track: {
+                background: '#fff',
+                strokeWidth: '67%',
+                margin: 0, 
+                dropShadow: {
+                enabled: true,
+                top: -3,
+                left: 0,
+                blur: 4,
+                opacity: 0.35
+                }
+            },
+        
+            dataLabels: {
+                show: true,
+                name: {
+                offsetY: -10,
+                show: true,
+                color: '#888',
+                fontSize: '17px'
+                },
+                value: {
+                formatter: function(val) {
+                    return parseInt(val);
+                },
+                color: '#111',
+                fontSize: '26px',
+                show: true,
+                }
+            }
+            }
+        },
+        fill: {
+            type: 'gradient',
+            gradient: {
+            shade: 'dark',
+            type: 'horizontal',
+            shadeIntensity: 0.5,
+            gradientToColors: ['#eab995'],
+            inverseColors: true,
+            opacityFrom: 1,
+            opacityTo: 1,
+            stops: [0, 100]
+            }
+        },
+        stroke: {
+            lineCap: 'round'
+        },
+        labels: ['Points'],
+        };
+
+        var chart = new ApexCharts(document.querySelector("#chart4"), options);
+        chart.render();
+
+       {{/each}}     
+
+    </script>
+</body>
