--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,27 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Penny Pinchers</title>
+    <link rel="stylesheet" href="/CSS/style.css" type="text/css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+</head>
 
+<body>
     <header class="headTitle">
         <h1 class="headApName">Penny Pinchers</h1>
-        <h3 class="headApSlogan">Who's the ultimate saver?</h3>
-    </header>  
+    
+    </header> 
+<div class="wholeWrapperIndex">
+     
 
     <div class="mainForm">
         <form id = 'mainFormDiv'>
             <p class="mainUsername">Username</p>
-            <input type="text" name="addMainUsername">
+            <input name="addMainUsername">
             <p class="mainPassword">Password</p>
             <input type="password" name="addMainPassword">
+            <br>
             <button type="submit" class="mainLogBut">login</button>
         </form>
 
@@ -18,5 +30,6 @@
         </div>
 
     </div>
-    
+</div>   
     <script src="https://code.jquery.com/jquery.js"></script>
+</body>
