--- a/views/setbudget.handlebars
+++ b/views/setbudget.handlebars
@@ -1,10 +1,17 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Penny Pinchers</title>
+    <link rel="stylesheet" href="/CSS/budget.css" type="text/css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+</head>
 
+<body>
      <header class="headTitle">
         <h1 class="headApName">Penny Pinchers</h1>
-        <h3 class="headApSlogan">Who's the ultimate saver?</h3>
-    </header>  
-
-    <br>
+    
+    </header> 
 
     <div class="main">
         <form class="budget-form">
@@ -29,3 +36,4 @@
     </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
+</body>
