--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,16 @@
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Penny Pinchers</title>
+    <link rel="stylesheet" href="/CSS/signup.css" type="text/css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+</head>
+<body>
+    <header class="headTitle">
+        <h1 class="headApName">Penny Pinchers</h1>
+        
+    </header> 
     <div class="main">
         <form class="form">
             <p class="fname">First Name: </p>
@@ -19,4 +31,6 @@
         <a href="./index.html" class="index"></a>
     </div>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script></script>
+
+</body>
