--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -75,7 +75,7 @@
     {{#each points}}
 
         var options = {
-            series: [Number({{groceriesPoints}})],
+            series: [Number({{groceriesBudget}})],
             chart: {
             height: 200,
             type: 'radialBar',
@@ -160,7 +160,7 @@
         //Chart 2 --------------------------------------
 
             var options = {
-            series: [Number({{transportationPoints}})],
+            series: [Number({{transportationBudget}})],
             chart: {
             height: 200,
             type: 'radialBar',
@@ -245,7 +245,7 @@
         //Chart 3 --------------------------------------
 
             var options = {
-            series:  [Number({{diningPoints}})],
+            series:  [Number({{diningBudget}})],
             chart: {
             height: 200,
             type: 'radialBar',
@@ -330,7 +330,7 @@
         //Chart 4 --------------------------------------
 
             var options = {
-            series: [Number({{shoppingPoints}})],
+            series: [Number({{shoppingBudget}})],
             chart: {
             height: 200,
             type: 'radialBar',
