log bill put method and dashboard get method

--- a/views/addbill.handlebars
+++ b/views/addbill.handlebars
@@ -37,5 +37,5 @@
         <a href="./index.html" class="index"></a>
     </div>
 
-    <script src='../Public/JS/addbill.js'></script>
+    <script type="text/javascript" src='JS/addbill.js'></script>
 </body>
