--- a/views/setbudget.handlebars
+++ b/views/setbudget.handlebars
@@ -18,7 +18,7 @@
             <p class="budget-header">Enter the amount you would like to budget for each category: </p>
 
             <p class="grocery-budget">Groceries</p>
-            <div class="dollar">$<input class="grocery-input" type="number" id="groceryBudget" min="0" step="1"></div>
+            <div class="dollar">$<input class="grocery-input" type="number" id="groceryBudget" name="grocery-input" min="0" step="1"></div>
 
             <p class="transportation-budget">Transportation</p>
             <div class="dollar">$<input class="transportation-input" type="number" id="transportationInput" name="transportation-input" min="0" step="1"></div>
@@ -35,5 +35,6 @@
         </form>
     </div>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+    
+    <script src="JS/setbudget.js"></script>
 </body>
