--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -14,15 +14,15 @@
     <div class="main">
         <form class="form">
             <p class="fname">First Name: </p>
-            <input type="text" id="fname" name="fname">
+            <input type="text" id="fname" name="user">
             <p class="lname">Last Name: </p>
-            <input type="text" id="lname" name="lname">
+            <input type="text" id="lname" name="user">
             <p class="uname">Choose a user name: </p>
-            <input type="text" id="uname" name="uname">
+            <input type="text" id="uname" name="user">
             <p class="pwd">Choose a password: </p>
-            <input type="password" id="pwd" name="pwd">
+            <input type="password" id="pwd" name="user">
             <p class="pwd2">Reenter your password: </p>
-            <input type="password" id="pwd2" name="pwd2">
+            <input type="password" id="pwd2" name="user">
             <button type="submit" class="subBtn">Sign up</button>
         </form>
     </div>
