added responsiveness to the dashboard and rough draft of accumulator

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,7 +17,7 @@
    
     <div class="dashSaveTitle">
          {{#each budget}}
-    <div class="dashSaveTitle">
+    
         <div class="grocDiv">
             <h3 class="dashGroc">Groceries</h3>
             <p class="grocBudget">{{groceries}}</p>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="pointDiv">
-        <p class="point">Total points: </p>
+        <p class="point">Total points: {{totalPoints}} </p>
     </div>
 
     <div class="buts">
