--- a/Public/CSS/dashboard.css
+++ b/Public/CSS/dashboard.css
@@ -93,7 +93,7 @@ html,body {
     float: left;
 }
 
-.graphDiv {position: relative;clear: both;font-family: 'Exo 2', sans-serif;color: #f9d8c0;font-size: 1em;text-align:center;left: 0;right: 0;margin: 0 auto;/* width: 40%; */height: 178px;margin-top: -50px;border: 2px solid #bdb9b999;background-color: #eae7e7ba;background-color: #60452ab0;box-shadow: 10px 10px 8px #bfb6b65e;}
+.graphDiv {position: relative;clear: both;font-family: 'Exo 2', sans-serif;color: #f9d8c0;font-size: 1em;text-align:center;left: 0;right: 0;margin: 0 auto; width: 600px; height: 178px;margin-top: -50px;border: 2px solid #bdb9b999;background-color: #eae7e7ba;background-color: #60452ab0;box-shadow: 10px 10px 8px #bfb6b65e;}
 
 .pointDiv {
     clear: both;
@@ -104,7 +104,7 @@ html,body {
 }
 
 .point {
-    /* width: 40%; */
+    width: 600px; 
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -143,14 +143,21 @@ html,body {
     margin-top: 0px;
     padding: 10px;
     height: 36px;
+     left: 0;
+    right: 0;
+    margin: 0 auto;
     border: 0px solid black;
     background-color: #4c47409c;
     text-decoration: none;
     font-size: .8em;
-    width: 580.3px;
+    width: 584px;
+    
 }
 
-.logBillBut {width: 50%;float: left;text-align: center;}
+.logBillBut {width: 50%;
+            float: left;
+            text-align: center;
+}
 
 .setBut {
     border-left: 2px solid #ded1c7d1;
@@ -159,16 +166,6 @@ html,body {
     text-align: center;
 }
 
-.buts {
-    margin-top: 0px;
-    padding: 10px;
-    height: 36px;
-    border: 0px solid black;
-    background-color: #4c47409c;
-    text-decoration: none;
-    font-size: .8em;
-    width: 580.3px;
-}
 
 a {
     text-decoration: none;
@@ -181,4 +178,246 @@ a {
 a:hover {
     color: #eab995;
     font-size: 2.2em;
+}
+
+@media only screen and (max-width: 645px) {
+    .dashAll {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 61px;
+    margin-top: 6%;
+    font-family: 'Exo 2', sans-serif;
+
+}
+
+      .grocDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        }
+
+    .transDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        padding-top: 35px;
+    }
+
+    .diningDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        padding-top: 35px;
+    }
+
+    .shopDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        padding-top: 35px;
+    }
+
+    .chart1Div {
+    width: 100%;
+    float: none;
+  
+    }
+
+    .chart2Div {
+        width: 100%;
+         float: none;
+         margin-top: -21px
+    }
+
+    .chart3Div {
+        width: 100%;
+         float: none;
+          margin-top: -28px
+    }
+
+    .chart4Div {
+        width: 100%;
+        float: none;
+        margin-top: -28px
+    }
+
+    .dashSaveTitle {
+    text-align: center;
+    position: relative;
+    width: 200px;
+    height: 630px;
+    margin: 0 0px;
+    border: 2px solid #bdb9b999;
+    background-color: #eae7e7ba;
+    background-color: #886543b0;
+    box-shadow: 10px 10px 8px #bfb6b65e;
+    margin-bottom: 0;
+    color: #f9d8c0;
+    border-right: none;
+    font-size: 1.1em;
+}
+    .graphDiv {
+        width: 161px;
+   
+        margin-left: 203px;
+        margin-top:-634px;
+        height: 630px;
+        border-left: none;
+    }
+
+    .pointDiv {
+        width: 367px;
+        
+    }
+
+    .point {
+        text-align: start;
+        width: 361px;
+    }
+
+    .buts {
+    margin-top: 0px;
+    padding: 10px;
+    height: 36px;
+    margin: 0 0;
+    border: 0px solid black;
+    background-color: #4c47409c;
+    text-decoration: none;
+    font-size: .8em;
+    width: 347.3px;
+    margin-bottom: 20px;
+}
+
+.logBillBut {width: 50%;float: left;text-align: center;}
+
+.setBut {
+    border-left: 2px solid #ded1c7d1;
+    width: 49%;
+    float: left;
+    text-align: center;
+}
+
+
+}
+
+@media only screen and (max-width: 400px) {
+        .dashAll {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    margin-top: 6%;
+    font-family: 'Exo 2', sans-serif;
+
+}
+      .grocDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        }
+
+    .transDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        padding-top: 50px;
+    }
+
+    .diningDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        padding-top: 50px;
+    }
+
+    .shopDiv {
+        text-align: center;
+        float: none;
+        width: 100%;
+        padding-top: 50px;
+    }
+
+    .chart1Div {
+    width: 100%;
+    float: none;
+  
+    }
+
+    .chart2Div {
+        width: 100%;
+         float: none;
+         margin-top: -21px
+    }
+
+    .chart3Div {
+        width: 100%;
+         float: none;
+          margin-top: -28px
+    }
+
+    .chart4Div {
+        width: 100%;
+        float: none;
+        margin-top: -28px
+    }
+
+    .dashSaveTitle {
+    text-align: center;
+    position: relative;
+    width: 154px;
+    height: 630px;
+    margin: 0 32px;
+    border: 2px solid #bdb9b999;
+    background-color: #eae7e7ba;
+    background-color: #886543b0;
+    box-shadow: 10px 10px 8px #bfb6b65e;
+    margin-bottom: 0;
+    color: #f9d8c0;
+    border-right: none;
+    font-size: 1.1em;
+}
+    .graphDiv {
+        width: 161px;
+   
+        margin-left: 189px;
+        margin-top:-634px;
+        height: 630px;
+        border-left: none;
+    }
+
+    .pointDiv {
+        width: 321px;
+        margin-left: 31px;
+        
+    }
+
+    .point {
+        text-align: start;
+        width: 314px;
+    }
+
+    .buts {
+    margin-top: 0px;
+    padding: 10px;
+    height: 36px;
+    border: 0px solid black;
+    background-color: #4c47409c;
+    text-decoration: none;
+    font-size: .8em;
+    width: 300px;
+    margin-left: 31px;
+    margin-bottom: 20px;
+}
+
+.logBillBut {width: 49%;float: left;text-align: center;}
+
+.setBut {
+    border-left: 2px solid #ded1c7d1;
+    width: 49%;
+    float: left;
+    text-align: center;
+}
+
+
 }
