--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,7 +12,7 @@
         
     </header> 
     <div class="main">
-        <form class="form">
+        <form action="/signup" class="form" method="POST">
             <p class="fname">First Name: </p>
             <input type="text" id="fname" name="fname">
             <p class="lname">Last Name: </p>
