backend on backend

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -20,19 +20,19 @@
     
         <div class="grocDiv">
             <h3 class="dashGroc">Groceries</h3>
-            <p class="grocBudget">{{groceries}}</p>
+            <p class="grocBudget">{{groceriesBudget}}</p>
         </div>
         <div class="transDiv">
             <h3 class="dashtrans">Transportation</h3>
-            <p class="transBudget">{{transportation}}</p>
+            <p class="transBudget">{{transportationBudget}}</p>
         </div>
         <div class="diningDiv">
             <h3 class="dashDining">Dining</h3>
-            <p class="diningBudget">{{dining}}</p>
+            <p class="diningBudget">{{diningBudget}}</p>
         </div>
         <div class="shopDiv">
             <h3 class="dashShop">Shopping</h3>
-            <p class="shopBudget">{{shopping}}</p>
+            <p class="shopBudget">{{shoppingBudget}}</p>
         </div>
     </div>
         {{/each}}
@@ -59,11 +59,11 @@
 
     <div class="buts">
         <div class="logBillBut">
-            <a href="/logBill">Log Bill</a>
+            <a href="/logBill/{{num}}">Log Bill</a>
         </div>
 
         <div class="setBut">
-            <a href="/setBudget">Set Budget</a>
+            <a href="/setBudget{{num}}">Set Budget</a>
         </div>
     </div>
 </div>
