--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
      
 
     <div class="mainForm">
-        <form id = 'mainFormDiv'>
+        <form action="/" id="mainFormDiv" method="POST">
             <p class="mainUsername">Username</p>
             <input name="addMainUsername">
             <p class="mainPassword">Password</p>
