--- a/views/setbudget.handlebars
+++ b/views/setbudget.handlebars
@@ -36,4 +36,5 @@
     </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/JS/setBudget.js"></script>
 </body>
