--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -63,7 +63,7 @@
         </div>
 
         <div class="setBut">
-            <a href="/setBudget{{num}}">Set Budget</a>
+            <a href="/setBudget/{{num}}">Set Budget</a>
         </div>
     </div>
 </div>
