--- a/views/setbudget.handlebars
+++ b/views/setbudget.handlebars
@@ -36,5 +36,20 @@
     </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/JS/setBudget.js"></script>
+    <script>
+        $('.budget-form').on('submit', function (e) {
+    e.preventDefault()
+    const updateBudget = {
+        budget: $('#budget-form [name=budget]').val(),
+        grocery: $('#groceryBudget').val(),
+        transportation: $('#transportationInput').val(),
+        dining: $('#diningInput').val(),
+        shopping: $('#shoppingInput').val()
+    }
+    $.ajax('/setBudget/{{num}}', {
+        type: 'PUT',
+        data: updateBudget
+    })
+})
+    </script>
 </body>
