--- a/views/setbudget.handlebars
+++ b/views/setbudget.handlebars
@@ -49,7 +49,11 @@
     $.ajax('/setBudget/{{num}}', {
         type: 'PUT',
         data: updateBudget
-    })
+    }).then(
+        function() {
+           location.reload
+        }
+    )
 })
     </script>
 </body>
