--- a/views/addbill.handlebars
+++ b/views/addbill.handlebars
@@ -54,9 +54,7 @@
         data: updateCat,
   
     }).then(
-        function() {
-           location.reload
-        }
+        window.location.href='/dashboard/{{num}}'
     )
 })
     </script>
