--- a/views/setbudget.handlebars
+++ b/views/setbudget.handlebars
@@ -50,9 +50,7 @@
         type: 'PUT',
         data: updateBudget
     }).then(
-        function() {
-           location.reload
-        }
+         window.location.href='/dashboard/{{num}}'
     )
 })
     </script>
