--- a/views/addbill.handlebars
+++ b/views/addbill.handlebars
@@ -54,7 +54,10 @@
         data: updateCat,
   
     }).then(
-        window.location.href='/dashboard/{{num}}'
+        window.location='/dashboard/{{num}}'
+        //location.reload(
+        //    true
+        //)
     )
 })
     </script>
