--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -69,7 +69,7 @@
 </div>
 
     <script type="text/javascript">
-    
+    //location.reload()
     //Chart 1 --------------------------------------
     
         var options = {
