--- a/views/setbudget.handlebars
+++ b/views/setbudget.handlebars
@@ -50,7 +50,7 @@
         type: 'PUT',
         data: updateBudget
     }).then(
-         window.location.href='/dashboard/{{num}}'
+         window.location='/dashboard/{{num}}'
     )
 })
     </script>
